# Mini-NCCL

./: .gitignore  CMakeLists.txt  README.md
demos/01_dual_process_rdma/: CMakeLists.txt  README.md
demos/01_dual_process_rdma/include/: tcp_socket.hpp
demos/01_dual_process_rdma/src/: main.cu
include/: Config.h  mini_nccl.h  mini_nccl_api.h
src/: api.cpp  main.cpp  mini_nccl.cu
src/hera/: HeraSocket.h  hera_master.h  hera_msg.h  hera_worker.h
src/transport/: LockFreeQueue.h  RDMATransport.h  Socket.h
tests/: hera_master_main.cpp  hera_test.cpp  perf_test.cpp
